load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "clang",
    values = {"compiler": "clang-cl"},
)

_copts = select({
    ":clang": [
        "-msse2",
        "-msse3",
        "-mssse3",
        "-msse4.1",
        "-msse4.2",
        "-mpclmul",
        "-maes",
        "-mavx",
        "-mavx2",
        "-msha",
    ],
    "//conditions:default": [],
})

cc_library(
    name = "cryptopp",
    copts = _copts,
    hdrs = glob(["*.h"]) + [
        "algebra.cpp",
        "eccrypto.cpp",
        "eprecomp.cpp",
        "strciphr.cpp",
        "polynomi.cpp",
    ],
    srcs = glob(["*.cpp"]) + [
        "x64dll.asm",
    ],
)
