load("@rules_cc//cc:defs.bzl", "cc_library")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

package(default_visibility = ["//visibility:public"])

# Rename .asm to .S so that it will be handled with the C preprocessor.
[copy_file(
    name = "rename_%s" % name,
    src = "%s.asm" % name,
    out = "%s.S" % name,
) for name in [
    "x64dll",
    "x64masm",
]]

cc_library(
    name = "cryptopp",
    defines = ["CRYPTOPP_DISABLE_ASM=1"],
    includes = ["."],
    hdrs = glob(["*.h"]) + [
        "algebra.cpp",
        "eccrypto.cpp",
        "eprecomp.cpp",
        "strciphr.cpp",
        "polynomi.cpp",
    ],
    srcs = glob(["*.cpp"], exclude = ["fipstest.cpp"]) + [
        "x64dll.S",
        "x64masm.S",
    ],
)
